--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,25 @@
 cmake_minimum_required(VERSION 3.12)
+#-------------------------------------------------------------------------------------------
+# I'm going to use vcpk in most cases for our install of 3rd party libs
+# this is going to check the environment variable for CMAKE_TOOLCHAIN_FILE and this must point to where
+# vcpkg.cmake is in the University this is set in your .bash_profile to
+# export CMAKE_TOOLCHAIN_FILE=/public/devel/2020/vcpkg/scripts/buildsystems/vcpkg.cmake
+#-------------------------------------------------------------------------------------------
+if(NOT DEFINED CMAKE_TOOLCHAIN_FILE AND DEFINED ENV{CMAKE_TOOLCHAIN_FILE})
+   set(CMAKE_TOOLCHAIN_FILE $ENV{CMAKE_TOOLCHAIN_FILE})
+endif()
+
 # Name of the project
 project(FacialAnimationBuild)
 # This is the name of the Exe change this and it will change everywhere
 set(TargetName FacialAnimation)
+# This will include the file NGLConfig.cmake, you need to add the location to this either using
+# -DCMAKE_PREFIX_PATH=~/NGL or as a system environment variable. 
+find_package(NGL CONFIG REQUIRED)
 # Instruct CMake to run moc automatically when needed (Qt projects only)
 set(CMAKE_AUTOMOC ON)
 # find Qt libs
 find_package(Qt5Widgets)
-#find_package(Qt5 COMPONENTS Widgets OpenGL core Gui REQUIRED)
-find_package(fmt CONFIG REQUIRED)
 # use C++ 17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -16,31 +27,12 @@ set(CMAKE_CXX_EXTENSIONS ON)
 # Set the name of the executable we want to build
 add_executable(${TargetName})
 
-# Add NGL include path
-include_directories(include $ENV{HOME}/NGL/include)
 target_sources(${TargetName} PRIVATE ${PROJECT_SOURCE_DIR}/src/main.cpp  
 			${PROJECT_SOURCE_DIR}/src/NGLScene.cpp  
 			${PROJECT_SOURCE_DIR}/include/NGLScene.h  
 )
-add_compile_definitions(ADDLARGEMODELS)
 
-# see what platform we are on and set platform defines
-if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-	message("Mac build")
-	find_library(MACGL OpenGL)
-	add_definitions(-DGL_SCILENCE_DEPRICATION)
-	set ( PROJECT_LINK_LIBS ${MACGL})
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-	set ( PROJECT_LINK_LIBS -lGL)
-endif()
-
-# now add NGL specific values
-target_link_directories(${TargetName} PRIVATE $ENV{HOME}/NGL/lib )
-
-# add exe and link libs that must be after the other defines
-
-target_link_libraries(${TargetName} PRIVATE ${PROJECT_LINK_LIBS} NGL Qt5::Widgets fmt::fmt-header-only  )
-
+target_link_libraries(${TargetName} PRIVATE  NGL Qt5::Widgets)
 
 add_custom_target(${TargetName}CopyShaders ALL
     COMMAND ${CMAKE_COMMAND} -E copy_directory
